feat: cloud provider detector