@@ -7,18 +7,27 @@ import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 @Slf4j
 @Getter
 @ApplicationScoped
 public class CloudProviderDetector {
 
-    private static final String METADATA_URL = "http://169.254.169.254";
+    protected static final String DEFAULT_METADATA_URL = "http://169.254.169.254";
     private static final int CONNECT_TIMEOUT_MS = 300;
     private static final int READ_TIMEOUT_MS = 300;
 
+    private final String metadataUrl;
     private CloudProvider cloudProvider;
+
+    CloudProviderDetector() {
+        this(DEFAULT_METADATA_URL);
+    }
+
+    CloudProviderDetector(String metadataUrl) {
+        this.metadataUrl = metadataUrl;
+    }
 
     @PostConstruct
     void init() {
@@ -26,7 +35,7 @@ public class CloudProviderDetector {
         log.info("Detected cloud provider: {}", cloudProvider);
     }
 
-    private static CloudProvider detect() {
+    protected CloudProvider detect() {
         if (isGke()) {
             return CloudProvider.GKE;
         }
@@ -39,9 +48,9 @@ public class CloudProviderDetector {
         return CloudProvider.OnPrem;
     }
 
-    private static boolean isGke() {
+    private boolean isGke() {
         try {
-            HttpURLConnection conn = openConnection(METADATA_URL + "/computeMetadata/v1/");
+            HttpURLConnection conn = openConnection(metadataUrl + "/computeMetadata/v1/");
             conn.setRequestProperty("Metadata-Flavor", "Google");
             int code = conn.getResponseCode();
             String flavor = conn.getHeaderField("Metadata-Flavor");
@@ -53,9 +62,9 @@ public class CloudProviderDetector {
         }
     }
 
-    private static boolean isEks() {
+    private boolean isEks() {
         try {
-            HttpURLConnection conn = openConnection(METADATA_URL + "/latest/meta-data/");
+            HttpURLConnection conn = openConnection(metadataUrl + "/latest/meta-data/");
             int code = conn.getResponseCode();
             log.debug("EKS probe: status={}", code);
             // 200 = IMDSv1 open, 401 = IMDSv2 required — both confirm EC2/EKS
@@ -66,9 +75,9 @@ public class CloudProviderDetector {
         }
     }
 
-    private static boolean isAks() {
+    private boolean isAks() {
         try {
-            HttpURLConnection conn = openConnection(METADATA_URL + "/metadata/instance?api-version=2021-02-01");
+            HttpURLConnection conn = openConnection(metadataUrl + "/metadata/instance?api-version=2021-02-01");
             conn.setRequestProperty("Metadata", "true");
             int code = conn.getResponseCode();
             log.debug("AKS probe: status={}", code);
@@ -80,7 +89,7 @@ public class CloudProviderDetector {
     }
 
     private static HttpURLConnection openConnection(String url) throws Exception {
-        HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+        HttpURLConnection conn = (HttpURLConnection) new URI(url).toURL().openConnection();
         conn.setConnectTimeout(CONNECT_TIMEOUT_MS);
         conn.setReadTimeout(READ_TIMEOUT_MS);
         conn.setRequestMethod("GET");
